RESOLVED FIXED68639
FrameView::invalidateRect and FrameView::setFrameRect shouldn't take LayoutRects
https://bugs.webkit.org/show_bug.cgi?id=68639
Summary FrameView::invalidateRect and FrameView::setFrameRect shouldn't take LayoutRects
Anders Carlsson
Reported 2011-09-22 10:54:20 PDT
FrameView::invalidateRect and FrameView::setFrameRect shouldn't take LayoutRects
Attachments
Patch (2.34 KB, patch)
2011-09-22 10:56 PDT, Anders Carlsson
hyatt: review+
Anders Carlsson
Comment 1 2011-09-22 10:56:54 PDT
Dave Hyatt
Comment 2 2011-09-22 10:57:32 PDT
Comment on attachment 108363 [details] Patch r=me
Anders Carlsson
Comment 3 2011-09-22 10:59:59 PDT
Note You need to log in before you can comment on or make changes to this bug.