FrameView::invalidateRect and FrameView::setFrameRect shouldn't take LayoutRects https://bugs.webkit.org/show_bug.cgi?id=68639

Reviewed by David Hyatt.

FrameView::invalidateRect and FrameView::setFrameRect override Widget and ScrollView
member functions that take IntRects, and Widget coordinates are currently defined in terms of
IntRects (and probably always should since we want them to be pixel-aligned).

* page/FrameView.cpp:
(WebCore::FrameView::invalidateRect):
(WebCore::FrameView::setFrameRect):
* page/FrameView.h:


Canonical link: https://commits.webkit.org/84582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95738 268f45cc-cd09-0410-ab3c-d52691b4dbfc